2000-02-26  Shirasaki Yasuhiro  <yasuhiro@gnome.gr.jp>

	* app/menus.c
	* plug-ins/gap/gap_frontends_main.c
	* plug-ins/script-fu/script-fu.c
	* plug-ins/webbrowser/webbrowser.c: moved dummy menu entries
	for menu path translation into plugins.

Sat Feb 26 04:37:44 CET 2000  Sven Neumann <sven@gimp.org>

	* libgimp/Makefile.am: excluded gserialize.[ch] from the build

	* libgimp/*: header cleanup

2000-02-26  Michael Natterer  <mitch@gimp.org>

	* app/channels_dialog.c
	* app/layers_dialog.c
	* app/ops_buttons.[ch]
	* app/paths_dialog.c: use GimpPixmap widgets. Don't pass the
	parent widget pointer to ops_button_box_new().

2000-02-25  Asbjorn Pettersen  <asbjornP@dualog.no>

	* libgimp/gimpenv.c: <sys/types.h> before <sys/stat.h> to skip
	warning (OS/2)

Fri Feb 25 19:50:35 CET 2000  Sven Neumann <sven@gimp.org>

	* plug-ins/Lighting/Makefile.am
	* plug-ins/MapObject/Makefile.am: remove header files that were
	removed from the tree

2000-02-24  Michael Natterer  <mitch@gimp.org>

	* plug-ins/print/print.c: use the ui constructors from libgimp,
	put the widgets into frames, removed callbacks wich are not used
	any more. Makes the dialog smaller but is not perfect yet.
	Re-applied Sven's patch which initializes the "File" printer.

Thu Feb 24 18:44:58 CET 2000  Sven Neumann <sven@gimp.org>

	* app/menus.c: Applied patch provided by Daniel Egger that 
	enables shortcuts for the toolbox menus. Nice for tall toolbox
	layouts.

Thu Feb 24 17:06:02 CET 2000  Sven Neumann <sven@gimp.org>

	* app/fileops_cmds.c
	* tools/pdbgen/pdb/fileops.pdb: don't add an already registered
	load|save handler twice to the list. This fixes the problem
	that extension were listed twice if a load|save plugin changed.

	* app/plug_in.[ch]: code cleanup, indentation 

	* app/xcf.[ch]: same here, include copyright headers
	
	* plug-ins/common/wmf.c: properly cancel the load if the user
	pressed Cancel in the dialog (fixes bug #6500)

2000-02-24  Michael Natterer  <mitch@gimp.org>
