@@ -1,3 +1,8 @@
+Sat Feb 26 14:56:15 CET 2000  Sven Neumann <sven@gimp.org>
+
+	* plug-ins/common/exchange.c: implemented locking of threshold
+	sliders (fixes bug #6613)
+
 2000-02-26  Shirasaki Yasuhiro  <yasuhiro@gnome.gr.jp>
 
 	* app/menus.c
